--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required(VERSION 2.8)
 project(DS2I)
 
 configure_file(
-  ${DS2I_SOURCE_DIR}/ds2i_config.hpp.in
-  ${DS2I_SOURCE_DIR}/ds2i_config.hpp
+  ${DS2I_SOURCE_DIR}/include/ds2i_config.hpp.in
+  ${DS2I_SOURCE_DIR}/include/ds2i_config.hpp
   ESCAPE_QUOTES)
 
 if(NOT CMAKE_BUILD_TYPE)
@@ -33,65 +33,25 @@ if (UNIX)
 
 endif()
 
+find_package(OpenMP)
+if(OPENMP_FOUND)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+endif()
+
 # set(Boost_USE_STATIC_LIBS ON)
 find_package(Boost 1.42.0 COMPONENTS iostreams unit_test_framework filesystem system thread REQUIRED)
 include_directories(${Boost_INCLUDE_DIRS})
 link_directories(${Boost_LIBRARY_DIRS})
 
-# stxxl
-add_definitions(-DSTXXL_VERBOSE_LEVEL=-10) # suppress messages to stdout
-add_subdirectory(stxxl)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${STXXL_CXX_FLAGS}")
-include_directories(${STXXL_INCLUDE_DIRS})
+add_subdirectory(external)
 
 # add the root directory to include path to make includes absolute
-include_directories(${DS2I_SOURCE_DIR})
+include_directories(${DS2I_SOURCE_DIR}/external
+		    ${STXXL_INCLUDE_DIRS}
+		    ${DS2I_SOURCE_DIR}/include
+		    )
 
-add_subdirectory(succinct EXCLUDE_FROM_ALL)
-add_subdirectory(FastPFor EXCLUDE_FROM_ALL)
-
-add_executable(create_freq_index create_freq_index.cpp wand_data.hpp)
-target_link_libraries(create_freq_index
-  ${Boost_LIBRARIES}
-  FastPFor_lib
-  )
-
-add_executable(optimal_hybrid_index optimal_hybrid_index.cpp)
-target_link_libraries(optimal_hybrid_index
-  ${Boost_LIBRARIES}
-  FastPFor_lib
-  ${STXXL_LIBRARIES}
-)
-
-add_executable(create_wand_data create_wand_data.cpp)
-target_link_libraries(create_wand_data
-  ${Boost_LIBRARIES}
-  )
-
-add_executable(queries queries.cpp)
-target_link_libraries(queries
-  ${Boost_LIBRARIES}
-  FastPFor_lib
-  )
-
-
-add_executable(profile_queries profile_queries.cpp)
-target_link_libraries(profile_queries
-  ${Boost_LIBRARIES}
-  FastPFor_lib
-  )
-
-add_executable(profile_decoding profile_decoding.cpp)
-target_link_libraries(profile_decoding
-  ${Boost_LIBRARIES}
-  FastPFor_lib
-  )
-
-add_executable(shuffle_docids shuffle_docids.cpp)
-target_link_libraries(shuffle_docids
-  ${Boost_LIBRARIES}
-  FastPFor_lib
-  )
+add_subdirectory(src)
 
 enable_testing()
 add_subdirectory(test)
