--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -1,4 +1,11 @@
+EXECUTE_PROCESS(COMMAND git submodule update --init
+                WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/..
+                OUTPUT_QUIET
+        )
+
+# Add succinct
 add_subdirectory(succinct EXCLUDE_FROM_ALL)
+# Add FastPFor
 add_subdirectory(FastPFor EXCLUDE_FROM_ALL)
 
 # stxxl
