--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -7,6 +7,9 @@ EXECUTE_PROCESS(COMMAND git submodule update --init
 add_subdirectory(succinct EXCLUDE_FROM_ALL)
 # Add FastPFor
 add_subdirectory(FastPFor EXCLUDE_FROM_ALL)
+# Add cxxopts
+set(CXXOPTS_BUILD_EXAMPLES OFF CACHE BOOL "Enable cxxopts examples")
+add_subdirectory(cxxopts EXCLUDE_FROM_ALL)
 
 # stxxl
 add_definitions(-DSTXXL_VERBOSE_LEVEL=-10) # suppress messages to stdout
