--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "external/cxxopts"]
 	path = external/cxxopts
 	url = https://github.com/jarro2783/cxxopts.git
+[submodule "external/CMake-codecov"]
+	path = external/CMake-codecov
+	url = https://github.com/RWTH-HPC/CMake-codecov.git
