--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ env:
     - DEPS_DIR=${TRAVIS_BUILD_DIR}/deps
     - BOOST_URL="http://sourceforge.net/projects/boost/files/boost/1.63.0/boost_1_63_0.tar.gz"
     - BOOST_VERSION="1_63_0"
+    - CODECOV_TOKEN="6e50b828-a642-4ca7-8bc8-3d749ff274c1"
+
 
 cache:
   directories:
@@ -23,6 +25,7 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-6
+            - lcov
       env:
         - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
 
@@ -51,6 +54,9 @@ before_install:
 script:
     - mkdir build
     - cd build
-    - cmake -DCMAKE_BUILD_TYPE=Debug ${CMAKE_OPTIONS} ..
+    - cmake -DCMAKE_BUILD_TYPE=Debug -DENABLE_COVERAGE=On ${CMAKE_OPTIONS} ..
     - make
     - ctest
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
