--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,8 @@ add_executable(create_freq_index create_freq_index.cpp)
 target_link_libraries(create_freq_index
   ${Boost_LIBRARIES}
   FastPFor
+  streamvbyte
+  MaskedVByte
   cxxopts
   )
 
@@ -9,6 +11,8 @@ add_executable(optimal_hybrid_index optimal_hybrid_index.cpp)
 target_link_libraries(optimal_hybrid_index
   ${Boost_LIBRARIES}
   FastPFor
+  streamvbyte
+  MaskedVByte
   ${STXXL_LIBRARIES}
 )
 
@@ -21,6 +25,8 @@ add_executable(queries queries.cpp)
 target_link_libraries(queries
   ${Boost_LIBRARIES}
   FastPFor
+  streamvbyte
+  MaskedVByte
   )
 
 
@@ -28,16 +34,22 @@ add_executable(profile_queries profile_queries.cpp)
 target_link_libraries(profile_queries
   ${Boost_LIBRARIES}
   FastPFor
+  streamvbyte
+  MaskedVByte
   )
 
 add_executable(profile_decoding profile_decoding.cpp)
 target_link_libraries(profile_decoding
   ${Boost_LIBRARIES}
   FastPFor
+  streamvbyte
+  MaskedVByte
   )
 
 add_executable(shuffle_docids shuffle_docids.cpp)
 target_link_libraries(shuffle_docids
   ${Boost_LIBRARIES}
   FastPFor
+  streamvbyte
+  MaskedVByte
   )
