--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -2,6 +2,8 @@ add_executable(index_perftest index_perftest.cpp)
 target_link_libraries(index_perftest
   ${Boost_LIBRARIES}
   FastPFor
+  streamvbyte
+  MaskedVByte
   )
 
 add_executable(perftest_interpolative perftest_interpolative.cpp)
@@ -14,6 +16,8 @@ add_executable(selective_queries selective_queries.cpp)
 target_link_libraries(selective_queries
   ${Boost_LIBRARIES}
   FastPFor
+  streamvbyte
+  MaskedVByte
   )
 
 add_executable(scan_perftest scan_perftest.cpp)
