--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -4,12 +4,14 @@ target_link_libraries(index_perftest
   FastPFor
   streamvbyte
   MaskedVByte
+  QMX
   )
 
 add_executable(perftest_interpolative perftest_interpolative.cpp)
 target_link_libraries(perftest_interpolative
   ${Boost_LIBRARIES}
   FastPFor
+  QMX
   )
 
 add_executable(selective_queries selective_queries.cpp)
@@ -18,6 +20,7 @@ target_link_libraries(selective_queries
   FastPFor
   streamvbyte
   MaskedVByte
+  QMX
   )
 
 add_executable(scan_perftest scan_perftest.cpp)
