--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -5,6 +5,7 @@ target_link_libraries(index_perftest
   streamvbyte
   MaskedVByte
   QMX
+  simdcomp
   )
 
 add_executable(perftest_interpolative perftest_interpolative.cpp)
@@ -12,6 +13,7 @@ target_link_libraries(perftest_interpolative
   ${Boost_LIBRARIES}
   FastPFor
   QMX
+  simdcomp
   )
 
 add_executable(selective_queries selective_queries.cpp)
@@ -21,6 +23,7 @@ target_link_libraries(selective_queries
   streamvbyte
   MaskedVByte
   QMX
+  simdcomp
   )
 
 add_executable(scan_perftest scan_perftest.cpp)
