Suppress warning, added progress for ii reorder

--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -58,6 +58,7 @@ target_compile_options(ParallelSTL INTERFACE -Wno-unused-parameter
                                            -Wno-unknown-pragmas
                                            -Wno-sign-compare
                                            -Wno-reorder
+                                           -Wno-unused-local-typedef
 )
 
 
