--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -24,9 +24,11 @@ target_link_libraries(selective_queries
   MaskedVByte
   QMX
   simdcomp
+  ParallelSTL
   )
 
 add_executable(scan_perftest scan_perftest.cpp)
 target_link_libraries(scan_perftest
   ${Boost_LIBRARIES}
+  ParallelSTL
   )
