--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,7 @@ target_link_libraries(create_freq_index
   QMX
   simdcomp
   CLI11
+  mio
   ParallelSTL
   )
 
@@ -19,6 +20,7 @@ target_link_libraries(optimal_hybrid_index
   QMX
   simdcomp
   ${STXXL_LIBRARIES}
+  mio
 )
 
 add_executable(create_wand_data create_wand_data.cpp)
@@ -27,6 +29,7 @@ target_link_libraries(create_wand_data
   QMX
   simdcomp
   CLI11
+  mio
   )
 
 add_executable(queries queries.cpp)
@@ -38,6 +41,7 @@ target_link_libraries(queries
   QMX
   simdcomp
   CLI11
+  mio
   )
 
 
@@ -49,6 +53,7 @@ target_link_libraries(profile_queries
   MaskedVByte
   QMX
   simdcomp
+  mio
   )
 
 add_executable(profile_decoding profile_decoding.cpp)
@@ -59,6 +64,7 @@ target_link_libraries(profile_decoding
   MaskedVByte
   QMX
   simdcomp
+  mio
   )
 
 add_executable(shuffle_docids shuffle_docids.cpp)
@@ -69,6 +75,7 @@ target_link_libraries(shuffle_docids
   MaskedVByte
   QMX
   simdcomp
+  mio
   )
 
 add_executable(recursive_graph_bisection recursive_graph_bisection.cpp)
@@ -77,6 +84,7 @@ target_link_libraries(recursive_graph_bisection
   CLI11
   QMX
   ParallelSTL
+  mio
 )
 set_target_properties(recursive_graph_bisection PROPERTIES
             CXX_STANDARD 17
@@ -90,4 +98,5 @@ target_link_libraries(evaluate_collection_ordering
   MaskedVByte
   QMX
   simdcomp
+  mio
   )
