--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_executable(index_perftest index_perftest.cpp)
 target_link_libraries(index_perftest
-  ${Boost_LIBRARIES}
+  mio
   FastPFor
   streamvbyte
   MaskedVByte
@@ -10,7 +10,7 @@ target_link_libraries(index_perftest
 
 add_executable(perftest_interpolative perftest_interpolative.cpp)
 target_link_libraries(perftest_interpolative
-  ${Boost_LIBRARIES}
+  mio
   FastPFor
   QMX
   simdcomp
@@ -18,7 +18,7 @@ target_link_libraries(perftest_interpolative
 
 add_executable(selective_queries selective_queries.cpp)
 target_link_libraries(selective_queries
-  ${Boost_LIBRARIES}
+  mio
   FastPFor
   streamvbyte
   MaskedVByte
@@ -28,5 +28,5 @@ target_link_libraries(selective_queries
 
 add_executable(scan_perftest scan_perftest.cpp)
 target_link_libraries(scan_perftest
-  ${Boost_LIBRARIES}
+  mio
   )
