Removed boost task_group in favour of TBB (#20)
Removed boost task_group in favour of TBB

--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -6,6 +6,7 @@ target_link_libraries(index_perftest
   MaskedVByte
   QMX
   simdcomp
+  ParallelSTL
   )
 
 add_executable(perftest_interpolative perftest_interpolative.cpp)
@@ -24,9 +25,11 @@ target_link_libraries(selective_queries
   MaskedVByte
   QMX
   simdcomp
+  ParallelSTL
   )
 
 add_executable(scan_perftest scan_perftest.cpp)
 target_link_libraries(scan_perftest
   ${Boost_LIBRARIES}
+  ParallelSTL
   )
