--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,7 @@ target_link_libraries(create_freq_index
   QMX
   simdcomp
   CLI11
+  ParallelSTL
   )
 
 add_executable(optimal_hybrid_index optimal_hybrid_index.cpp)
@@ -18,6 +19,7 @@ target_link_libraries(optimal_hybrid_index
   QMX
   simdcomp
   ${STXXL_LIBRARIES}
+  ParallelSTL
 )
 
 add_executable(create_wand_data create_wand_data.cpp)
@@ -26,6 +28,7 @@ target_link_libraries(create_wand_data
   QMX
   simdcomp
   CLI11
+  ParallelSTL
   )
 
 add_executable(queries queries.cpp)
@@ -37,6 +40,7 @@ target_link_libraries(queries
   QMX
   simdcomp
   CLI11
+  ParallelSTL
   )
 
 
@@ -48,6 +52,7 @@ target_link_libraries(profile_queries
   MaskedVByte
   QMX
   simdcomp
+  ParallelSTL
   )
 
 add_executable(profile_decoding profile_decoding.cpp)
@@ -58,6 +63,7 @@ target_link_libraries(profile_decoding
   MaskedVByte
   QMX
   simdcomp
+  ParallelSTL
   )
 
 add_executable(shuffle_docids shuffle_docids.cpp)
@@ -68,6 +74,7 @@ target_link_libraries(shuffle_docids
   MaskedVByte
   QMX
   simdcomp
+  ParallelSTL
   )
 
 add_executable(recursive_graph_bisection recursive_graph_bisection.cpp)
@@ -89,4 +96,5 @@ target_link_libraries(evaluate_collection_ordering
   MaskedVByte
   QMX
   simdcomp
+  ParallelSTL
   )
