--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,18 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 # include(external/external.cmake)
 add_subdirectory(external)
 
+include(ExternalProject)
+ExternalProject_Add(gumbo-external
+    SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/external/gumbo-parser
+    BINARY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/external/gumbo-parser
+    CONFIGURE_COMMAND ./autogen.sh && ./configure --prefix=${CMAKE_BINARY_DIR}/gumbo-parser
+    BUILD_COMMAND ${MAKE})
+add_library(gumbo::gumbo UNKNOWN IMPORTED)
+set_target_properties(gumbo::gumbo PROPERTIES INTERFACE_INCLUDE_DIRECTORIES
+    ${CMAKE_CURRENT_SOURCE_DIR}/external/gumbo-parser/src)
+set_property(TARGET gumbo::gumbo APPEND PROPERTY IMPORTED_LOCATION
+    ${CMAKE_BINARY_DIR}/gumbo-parser/lib/libgumbo.a)
+
 # Add code coverage
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/external/CMake-codecov/cmake")
 find_package(codecov)
