--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -66,4 +66,5 @@ target_compile_options(ParallelSTL INTERFACE -Wno-unused-parameter
                                            -Wno-unused-local-typedef
 )
 
-
+# GSL
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/GSL EXCLUDE_FROM_ALL)
