Fix GSL dependency

--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -7,6 +7,7 @@ target_link_libraries(index_perftest
   QMX
   simdcomp
   ParallelSTL
+  GSL
   )
 
 add_executable(perftest_interpolative perftest_interpolative.cpp)
@@ -15,6 +16,7 @@ target_link_libraries(perftest_interpolative
   FastPFor
   QMX
   simdcomp
+  GSL
   )
 
 add_executable(selective_queries selective_queries.cpp)
@@ -26,6 +28,7 @@ target_link_libraries(selective_queries
   QMX
   simdcomp
   ParallelSTL
+  GSL
   )
 
 add_executable(scan_perftest scan_perftest.cpp)
@@ -33,4 +36,5 @@ target_link_libraries(scan_perftest
   mio
   ${Boost_LIBRARIES}
   ParallelSTL
+  GSL
   )
