--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,7 @@ target_link_libraries(create_freq_index
   CLI11
   mio
   ParallelSTL
+  GSL
   )
 
 add_executable(optimal_hybrid_index optimal_hybrid_index.cpp)
@@ -22,6 +23,7 @@ target_link_libraries(optimal_hybrid_index
   ${STXXL_LIBRARIES}
   mio
   ParallelSTL
+  GSL
 )
 
 add_executable(create_wand_data create_wand_data.cpp)
@@ -32,6 +34,7 @@ target_link_libraries(create_wand_data
   CLI11
   mio
   ParallelSTL
+  GSL
   )
 
 add_executable(queries queries.cpp)
@@ -45,6 +48,7 @@ target_link_libraries(queries
   CLI11
   mio
   ParallelSTL
+  GSL
   )
 
 
@@ -58,6 +62,7 @@ target_link_libraries(profile_queries
   simdcomp
   mio
   ParallelSTL
+  GSL
   )
 
 add_executable(profile_decoding profile_decoding.cpp)
@@ -70,6 +75,7 @@ target_link_libraries(profile_decoding
   simdcomp
   mio
   ParallelSTL
+  GSL
   )
 
 add_executable(shuffle_docids shuffle_docids.cpp)
@@ -82,6 +88,7 @@ target_link_libraries(shuffle_docids
   simdcomp
   mio
   ParallelSTL
+  GSL
   )
 
 add_executable(recursive_graph_bisection recursive_graph_bisection.cpp)
@@ -91,6 +98,7 @@ target_link_libraries(recursive_graph_bisection
   QMX
   ParallelSTL
   mio
+  GSL
 )
 set_target_properties(recursive_graph_bisection PROPERTIES
             CXX_STANDARD 17
@@ -106,7 +114,7 @@ target_link_libraries(evaluate_collection_ordering
   simdcomp
   mio
   ParallelSTL
-  gumbo::gumbo
+  GSL
   )
 
 add_executable(parse_collection parse_collection.cpp)
@@ -115,6 +123,7 @@ target_link_libraries(parse_collection
   CLI11
   mio
   ParallelSTL
+  GSL
   gumbo::gumbo
   )
 target_compile_features(parse_collection PRIVATE cxx_std_17)
@@ -125,6 +134,7 @@ target_link_libraries(read_collection
   CLI11
   mio
   ParallelSTL
+  GSL
   gumbo::gumbo
   )
 target_compile_features(parse_collection PRIVATE cxx_std_17)
