--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,15 @@ matrix:
             - lcov
       env:
         - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
-
+    - os: linux
+      compiler: clang
+      env: 
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - clang
 
 # Install dependencies
 before_install:
