--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,6 +5,7 @@ foreach(TEST_SRC ${TEST_SOURCES})
   get_filename_component (TEST_SRC_NAME ${TEST_SRC} NAME_WE)
   add_executable(${TEST_SRC_NAME} ${TEST_SRC})
   target_link_libraries(${TEST_SRC_NAME}
+    Boost::boost
     QMX
     mio
     ParallelSTL
