Fixed boost deps

--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_executable(index_perftest index_perftest.cpp)
 target_link_libraries(index_perftest
+  Boost::boost
   mio
   FastPFor
   streamvbyte
@@ -11,6 +12,7 @@ target_link_libraries(index_perftest
 
 add_executable(perftest_interpolative perftest_interpolative.cpp)
 target_link_libraries(perftest_interpolative
+  Boost::boost
   mio
   FastPFor
   QMX
@@ -19,6 +21,7 @@ target_link_libraries(perftest_interpolative
 
 add_executable(selective_queries selective_queries.cpp)
 target_link_libraries(selective_queries
+  Boost::boost
   mio
   FastPFor
   streamvbyte
