Removed boost as a system dependency (#34)
Removed boost as a system dependency

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_executable(create_freq_index create_freq_index.cpp)
 target_link_libraries(create_freq_index
-  ${Boost_LIBRARIES}
+  Boost::boost
   FastPFor
   streamvbyte
   MaskedVByte
@@ -13,7 +13,7 @@ target_link_libraries(create_freq_index
 
 add_executable(optimal_hybrid_index optimal_hybrid_index.cpp)
 target_link_libraries(optimal_hybrid_index
-  ${Boost_LIBRARIES}
+  Boost::boost
   FastPFor
   streamvbyte
   MaskedVByte
@@ -26,7 +26,7 @@ target_link_libraries(optimal_hybrid_index
 
 add_executable(create_wand_data create_wand_data.cpp)
 target_link_libraries(create_wand_data
-  ${Boost_LIBRARIES}
+  Boost::boost
   QMX
   simdcomp
   CLI11
@@ -36,7 +36,7 @@ target_link_libraries(create_wand_data
 
 add_executable(queries queries.cpp)
 target_link_libraries(queries
-  ${Boost_LIBRARIES}
+  Boost::boost
   FastPFor
   streamvbyte
   MaskedVByte
@@ -50,7 +50,7 @@ target_link_libraries(queries
 
 add_executable(profile_queries profile_queries.cpp)
 target_link_libraries(profile_queries
-  ${Boost_LIBRARIES}
+  Boost::boost
   FastPFor
   streamvbyte
   MaskedVByte
@@ -62,7 +62,7 @@ target_link_libraries(profile_queries
 
 add_executable(profile_decoding profile_decoding.cpp)
 target_link_libraries(profile_decoding
-  ${Boost_LIBRARIES}
+  Boost::boost
   FastPFor
   streamvbyte
   MaskedVByte
@@ -74,7 +74,7 @@ target_link_libraries(profile_decoding
 
 add_executable(shuffle_docids shuffle_docids.cpp)
 target_link_libraries(shuffle_docids
-  ${Boost_LIBRARIES}
+  Boost::boost
   FastPFor
   streamvbyte
   MaskedVByte
@@ -86,7 +86,7 @@ target_link_libraries(shuffle_docids
 
 add_executable(recursive_graph_bisection recursive_graph_bisection.cpp)
 target_link_libraries(recursive_graph_bisection
-  ${Boost_LIBRARIES}
+  Boost::boost
   CLI11
   QMX
   ParallelSTL
@@ -98,7 +98,7 @@ set_target_properties(recursive_graph_bisection PROPERTIES
 
 add_executable(evaluate_collection_ordering evaluate_collection_ordering.cpp)
 target_link_libraries(evaluate_collection_ordering
-  ${Boost_LIBRARIES}
+  Boost::boost
   FastPFor
   streamvbyte
   MaskedVByte
