--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -13,8 +13,19 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/CLI11 EXCLUDE_FROM_ALL)
 # stxxl
 add_definitions(-DSTXXL_VERBOSE_LEVEL=-10) # suppress messages to stdout
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/stxxl)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${STXXL_CXX_FLAGS}")
+# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${STXXL_CXX_FLAGS}")
 include_directories(${STXXL_INCLUDE_DIRS})
+set_target_properties(stxxl PROPERTIES
+            CXX_STANDARD 14
+)
+set_target_properties(${LIBSTXXL_SOURCES} PROPERTIES
+            CXX_STANDARD 14
+)
+set_target_properties(stxxl_tool test1 test2 PROPERTIES
+            CXX_STANDARD 14
+)
+
+
 
 # Add streamvbyte
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/streamvbyte/include)
