--- a/.travis.yml
+++ b/.travis.yml
@@ -49,4 +49,4 @@ script:
     - ctest -VV
 
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - bash <(curl -s https://codecov.io/bash) > /dev/null
