--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,17 @@ matrix:
             - lcov
       env:
         - MATRIX_EVAL="CC=gcc-8 && CXX=g++-8 && COVERAGE=Off"
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - llvm-toolchain-trusty-6.0
+            - sourceline: 'ppa:ubuntu-toolchain-r/test'
+          packages:
+            - llvm-6.0
+            - clang-6.0
+      env:
+        - MATRIX_EVAL="CC=clang-6.0 && CXX=clang++-6.0"
     - os: osx
       compiler: clang
       env:
