--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,14 @@ branches:
   only:
     - master
 
+common_sources: &all_sources
+  - ubuntu-toolchain-r-test
+  - llvm-toolchain-trusty
+  - llvm-toolchain-trusty-3.9
+  - llvm-toolchain-trusty-4.0
+  - llvm-toolchain-trusty-5.0
+  - llvm-toolchain-trusty-6.0
+
 env:
   global:
     - DEPS_DIR=${TRAVIS_BUILD_DIR}/deps
@@ -22,41 +30,31 @@ matrix:
     # works on Precise and Trusty
     - os: linux
       compiler: gcc
-      addons:
+      addons: &gcc7
         apt:
-          sources:
-            - ubuntu-toolchain-r-test
+          sources: *all_sources
           packages:
             - g++-7
             - lcov
-      env:
-        - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7 && COVERAGE=On"
+      env: MATRIX_EVAL="CC=gcc-7 && CXX=g++-7 && COVERAGE=On"
     - os: linux
       compiler: gcc
-      addons:
+      addons: &gcc8
         apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-8
-            - lcov
-      env:
-        - MATRIX_EVAL="CC=gcc-8 && CXX=g++-8 && COVERAGE=Off"
+          sources: *all_sources
+          packages: ['g++-8']
+      env: MATRIX_EVAL="CC=gcc-8 && CXX=g++-8 && COVERAGE=Off"
     - os: linux
+      compiler: clang
       addons:
-        apt:
-          sources:
-            - llvm-toolchain-trusty-6.0
-            - sourceline: 'ppa:ubuntu-toolchain-r/test'
-          packages:
-            - llvm-6.0
-            - clang-6.0
-      env:
-        - MATRIX_EVAL="CC=clang-6.0 && CXX=clang++-6.0"
+          apt:
+              sources: *all_sources
+              packages: ['clang-6.0']
+      env: MATRIX_EVAL="CC=clang-6.0 && CXX=clang++-6.0 && COVERAGE=Off"
+      
     - os: osx
       compiler: clang
-      env:
-        - MATRIX_EVAL="CC=clang && CXX=clang++ && COVERAGE=Off"
+      env: MATRIX_EVAL="CC=clang && CXX=clang++ && COVERAGE=Off"
 
 # Install dependencies
 before_install:
